# document_portal

./: pyproject.toml
config/: config.yaml
exception/: custom_exception.py
logger/: custom_logger.py
notebook/: 001_logging_experiment.ipynb  002_exception_experiment.ipynb
utils/: config_loader.py  model_loader.py
